--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "graphql": "^16.6.0",
     "graphql-yoga": "^3.7.3",
     "gray-matter": "^4.0.3",
+    "mongodb": "^5.1.0",
+    "mongoose": "^7.0.2",
+    "mongoose-paginate": "^5.0.3",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
+    "shuffle-array": "^1.0.1",
     "swr": "^2.1.0"
   },
   "devDependencies": {
