--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "date-fns": "^2.29.3",
@@ -24,7 +25,10 @@
     "swr": "^2.1.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "18.15.10",
-    "@types/react": "18.0.30"
+    "@types/react": "18.0.30",
+    "jest": "^29.5.0"
   }
 }
