--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-next": "13.2.4",
     "graphql-yoga": "^3.7.3",
     "gray-matter": "^4.0.3",
+    "iron-session": "^6.3.1",
     "mongodb": "^5.1.0",
     "next": "13.2.4",
     "react": "18.2.0",
