--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "graphql-yoga": "^3.7.3",
     "gray-matter": "^4.0.3",
     "iron-session": "^6.3.1",
-    "mongodb": "^5.1.0",
+    "mongodb": "^5.9.2",
+    "mongoose": "^8.0.3",
+    "mongoose-double": "^0.0.1",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
