--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/node": "18.15.10",
     "@types/react": "18.0.30",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "typescript": "5.4.5"
   }
 }
